2010-12-01  Steve Falkenburg  <sfalken@apple.com>

        Try using svn:eol-style native on a vcproj file.

        * DumpRenderTree/TestNetscapePlugIn/win/TestNetscapePlugin.vcproj: Modified property svn:eol-style.

2010-12-01  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Adam Roben.

        [WINCE] Add WinCELauncher
        https://bugs.webkit.org/show_bug.cgi?id=50217

        * WinCELauncher/main.cpp: Added.

2010-11-30  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Implement layoutTestController.findString
        https://bugs.webkit.org/show_bug.cgi?id=50236

        Add the missing function to the LayoutTestController.

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::findString):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

2010-11-30  Tony Chang  <tony@chromium.org>

        Reviewed by Adam Barth.

        [chromium] fix get-int-identifier-special-values.html using TestNetscapePlugIn
        https://bugs.webkit.org/show_bug.cgi?id=49036

        * DumpRenderTree/chromium/LayoutTestController.cpp: Use IsNumber instead of IsInt32
            for CppVariants.
        (LayoutTestController::cppVariantToBool):
        (LayoutTestController::cppVariantToInt32):
        (LayoutTestController::setDatabaseQuota):
        (LayoutTestController::evaluateInWebInspector):
        (LayoutTestController::setMockGeolocationError):

2010-11-30  Eric Seidel  <eric@webkit.org>

        Reviewed by Tony Chang.

        update-webkit should call git fetch before git svn rebase
        https://bugs.webkit.org/show_bug.cgi?id=50273

        After discussion on webkit-dev, we've decided to move the "default"
        git setup to pulling updates from git.webkit.org in preference
        to rebuilding the local svn index using git svn fetch every time.

        This change should have no effect on people using the "old" git setup