@@ -1,3 +1,15 @@
+2010-12-01  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Darin Adler.
+
+        WebKitTestRunner needs layoutTestController.findString
+        https://bugs.webkit.org/show_bug.cgi?id=50238
+
+        * WebKitTestRunner/InjectedBundle/Bindings/LayoutTestController.idl: Added findString().
+        * WebKitTestRunner/InjectedBundle/LayoutTestController.cpp:
+        (WTR::LayoutTestController::findString): Updated signature for autogenerated bindings.
+        * WebKitTestRunner/InjectedBundle/LayoutTestController.h: Ditto.
+
 2010-12-01  Steve Falkenburg  <sfalken@apple.com>
 
         Try using svn:eol-style native on a vcproj file.
